hphp/hack/test/package_v2/package_access/illegal_cross_package_with_crosspackage_attr1.php
//// a.php
<?hh
// package pkg1
class A {
  public function test() : void {
    test(); // error
  }
}
<<__CrossPackage("pkg2")>>
function test(): void {}
